@@ -1,3 +1,9 @@
+2007-06-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-console.c (script_fu_cc_key_function):
+	applied patch from Eric Lamarque with some minor modifications.
+	Fixes the remaining aspect of bug #438997.
+
 2007-06-20  Tor Lillqvist  <tml@novell.com>
 
 	* app/plug-in/gimpplugin.c: In GLib 2.13 pipe() is no longer
